# ptrVision

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_LIBRARY.md  run_test.bat  run_tests.sh  setup_build_linux.sh  setup_build_macos.sh  setup_build_windows.bat
docs/doxygen/: Doxyfile
docs/doxygen/html/: _asm_gen_8h_source.html  _cli_manager_8h_source.html  _file_handler_8h_source.html  _file_system_manager_8h_source.html  _gui_manager_8h_source.html  _im_gui_file_dialog_8h_source.html  _im_gui_file_dialog_config_8h_source.html  _json_parser_8h_source.html  _lib_exporter_8h_source.html  _logger_8h_source.html  _pointer_reference_action_8h_source.html  _pointer_reference_consumer_8h_source.html  _pointer_reference_factory_8h_source.html  _pointer_reference_visitor_8h_source.html  _project_explorer_8h_source.html  _syntax_highlighter_8h_source.html  _text_editor_8h_source.html  _tree_node_8h_source.html  annotated.html  category_app_view_controller_07_08-members.html  category_app_view_controller_07_08.html  category_app_view_controller_07_08__coll__graph.dot  category_n_s_cursor_07_08-members.html  category_n_s_cursor_07_08.html  class_cli_manager-members.html  class_cli_manager.html  class_lib_exporter-members.html  class_lib_exporter.html  class_lib_exporter_a93361974bbdfd083d1dbb3893ae540e6_cgraph.map  class_lib_exporter_a93361974bbdfd083d1dbb3893ae540e6_cgraph.md5  class_lib_exporter_ac1650e6673b9fe0c128e76705520af84_cgraph.map  class_lib_exporter_ac1650e6673b9fe0c128e76705520af84_cgraph.md5  class_lib_exporter_ad4258be65c51e4372e629ed86293eb3f_cgraph.map  class_lib_exporter_ad4258be65c51e4372e629ed86293eb3f_cgraph.md5  class_pointer_reference_factory-members.html  class_pointer_reference_factory.html  class_pointer_reference_factory__inherit__graph.dot  class_text_editor-members.html  class_text_editor.html  classbasic__json-members.html  (+1789 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  (+57 more)
docs/doxygen/latex/: _asm_gen_8h_source.tex  _cli_manager_8h_source.tex  _file_handler_8h_source.tex  _file_system_manager_8h_source.tex  _gui_manager_8h_source.tex  _im_gui_file_dialog_8h_source.tex  _im_gui_file_dialog_config_8h_source.tex  _json_parser_8h_source.tex  _lib_exporter_8h_source.tex  _logger_8h_source.tex  _pointer_reference_action_8h_source.tex  _pointer_reference_consumer_8h_source.tex  _pointer_reference_factory_8h_source.tex  _pointer_reference_visitor_8h_source.tex  _project_explorer_8h_source.tex  _syntax_highlighter_8h_source.tex  _text_editor_8h_source.tex  _tree_node_8h_source.tex  annotated.tex  category_app_view_controller_07_08.tex  category_app_view_controller_07_08.tex.tmp  category_app_view_controller_07_08__coll__graph.dot  category_n_s_cursor_07_08.tex  class_cli_manager.tex  class_lib_exporter.tex  class_lib_exporter_a93361974bbdfd083d1dbb3893ae540e6_cgraph.md5  class_lib_exporter_ac1650e6673b9fe0c128e76705520af84_cgraph.md5  class_lib_exporter_ad4258be65c51e4372e629ed86293eb3f_cgraph.md5  class_pointer_reference_factory.tex  class_pointer_reference_factory__inherit__graph.dot  class_text_editor.tex  classbasic__json.tex  classbasic__json__coll__graph.dot  classbasic__json__inherit__graph.dot  classbasic__json_a086cbfd1ad4ba83a8127c87467a92f47_icgraph.dot  classbasic__json_a145a004c0a2fa5be84b260ecc98ab5d9_cgraph.dot  classbasic__json_a184ba4a6b47e6da3703af19349bd776f_icgraph.dot  classbasic__json_a3819f393e82396782ccc22785575b01d_cgraph.dot  classbasic__json_a3d13acce4e49e0d5ee768643a7b89010_icgraph.dot  classbasic__json_a4dbc83213b31a171aa8ba65ff00fa954_icgraph.dot  (+796 more)
examples/: simple_example.cpp
include/: AsmGen.h  CliManager.h  CollectorAction.h  CollectorActionWithStorage.h  CollectorConsumer.h  FileHandler.h  FileSystemManager.h  GuiManager.h  JsonParser.h  LibExporter.h  Logger.h  PointerReferenceAction.h  PointerReferenceCollector.h  PointerReferenceConsumer.h  PointerReferenceFactory.h  PointerReferenceVisitor.h  ProjectExplorer.h  PtrVisionLib.h  SyntaxHighlighter.h  TreeNode.h  json.hpp
src/: AsmGen.cpp  CliManager.cpp  CollectorAction.cpp  CollectorActionWithStorage.cpp  CollectorConsumer.cpp  FileHandler.cpp  FileSystemManager.cpp  GuiManager.cpp  JsonParser.cpp  LibExporter.cpp  Logger.cpp  PointerReferenceAction.cpp  PointerReferenceCollector.cpp  PointerReferenceConsumer.cpp  PointerReferenceVisitor.cpp  ProjectExplorer.cpp  PtrVisionLib.cpp  TreeNode.cpp  main.cpp
test/: Hard_BitwiseAndRefFuncCall_test.cpp  Hard_BitwiseAndRefOperand_test.cpp  Hard_BitwiseAndRef_test.cpp  Hard_NewDeleteGoto_Test.cpp  Hard_ptrDerefAndMultiply_test.cpp  bitwiseAnd_test.cpp  multiplication_test.cpp  nullPtrDeref_test.cpp  ptrArith_test.cpp  ptrArray_test.cpp  ptrCast_test.cpp  ptrDerefAndPtrArithBitwiseOp.cpp  ptrDeref_test.cpp  ptrDouble_test.cpp  ptrStruct_test.cpp  ptrToFunc_test.cpp  ptrToPtr_deref_test.cpp  snippet_code_test.cpp
tests/: CMakeLists.txt  test_array_operations.cpp  test_bitwise_operations.cpp  test_complex_scenarios.cpp  test_error_handling.cpp  test_goto_statements.cpp  test_memory_management.cpp  test_pointer_arithmetic.cpp  test_pointer_dereference.cpp  test_references.cpp
